Bug 43765 - FORMCONTROLS: transparent form controls (Check Boxes and Option Buttons) disappear
Summary: FORMCONTROLS: transparent form controls (Check Boxes and Option Buttons) disa...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.4.4 release
Hardware: All All
: high critical
Assignee: Michael Stahl
URL:
Whiteboard: BSA target:4.2.0 target:4.1.0.2 targe...
Keywords: regression
: 49186 51420 57884 63949 (view as bug list)
Depends on:
Blocks: mab3.6
  Show dependency treegraph
 
Reported: 2011-12-12 15:06 UTC by Harald Koester
Modified: 2013-07-09 10:56 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
Canvas not repainting using MASTER from April 4th, (4.1) (188.26 KB, image/png)
2013-04-04 20:26 UTC, Dave Richards
Details
Example to demonstrate / test the bug (16.90 KB, application/vnd.oasis.opendocument.text)
2013-04-08 10:27 UTC, Thomas Thym
Details
Testfile saved as .doc (word 97/...) (36.50 KB, application/msword)
2013-04-08 10:37 UTC, Thomas Thym
Details
Testfile (.doc) saved as .odt again (16.16 KB, application/vnd.oasis.opendocument.text)
2013-04-08 10:38 UTC, Thomas Thym
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Harald Koester 2011-12-12 15:06:59 UTC
Problem description: 

This bug was first reported by Thomas Boehm on the German user mailing list.

In order to reproduce the bug:
[1] Open a new text document.
[2] Insert a 2x2 table, without heading.
[3] Insert a check box beneath the table. (Tool bar "Form Controls")
[4] Switch off Design Mode.
[5] Click into the table. The Check Box disappears!

Some more information:
- If you insert an Option Button the behavior is the same. 
- If the Design Mode is on, the Check Box does not disappear. 
- Position the cursor outside the table. If you change to another application and back to LO (with Alt+Tab), the Check Box becomes visible again.
- If you insert the table under the Check Box, the behavior is the same.
- If you insert more than one Check Box, all boxes disappear if you click into the table.

I did not find a workaround in order to avoid this problem!!!

Platform (if different from the browser): 
              
Browser: Mozilla/5.0 (Windows; U; Windows NT 5.1; de; rv:1.9.2.24) Gecko/20111103 Firefox/3.6.24
Comment 1 Frieder 2011-12-13 03:10:30 UTC
I can confirm that behaviour with LO 3.4.4 and windows7.
Comment 2 Thomas Thym 2011-12-21 08:48:26 UTC
I can confirm that bug in LOdev 3.5 (beta 1, LOdev 3.5.0 Build ID: 7362ca8-b5a8e65-af86909-d471f98-61464c4) on Windows XP with the following differences:

[5] Click into the table twice (into another cell).

- If you position the cursor outside the table the check box reappears (without changing the application).

If I (as a user) could help to nail that bug down, please let me know.
Comment 3 starmatz71 2012-02-05 02:51:45 UTC
I can confirm this behavior for LibreOffice V3.5.0 RC3 !!!
This bug also occures in LibreOffice V3.4.4 in Ubuntu Linux 11.10 64-Bit.

I think this is a problem in redrawing the table. It fills the boxes with the background-colour and draw the text inside but does not see the checkbox or the option-button.

Because this bugs appears platform independent this bug must be inside LibO.

I have tried to disable the hardwareaccaleration but the behavior is the same on both platforms.

If i export this as PDF the checkboxes and option fields are visible normally.

After saving and reloading the file (odf) the checkbox and optionbutton are visible, also if i type something in the table (!!!).
After adding a new Checkbox and typing into the table, in which the checkbox lies, the old beavior occures.

This is a great regression to create formulars in business and public administration. It is nor possible to work effectively if those checkboxes disappears "randomly".

This bug should be fixed soon!
Comment 4 Thomas Thym 2012-03-29 01:01:43 UTC
The bug is still here in LibreOffice 3.5.1.2 
Build-ID: dc9775d-05ecbee-0851ad3-1586698-727bf66
Windows XP
Comment 5 starmatz71 2012-03-30 12:39:04 UTC
I can confirm this on LibreOffice V3.5.1.2 in Ubuntu 11.10 64-Bit.
Comment 6 Dave Richards 2012-04-26 18:41:36 UTC
*** Bug 49186 has been marked as a duplicate of this bug. ***
Comment 7 Dave Richards 2012-04-26 18:44:26 UTC
Confirming the view that this is a serious bug. We have many documents constructed with this technique.
Comment 8 Harald Koester 2012-06-25 12:22:29 UTC
Bug 51420 is similar to this bug. May be there is the same reason.
Comment 9 Harald Koester 2012-11-27 09:28:59 UTC
Checked again:

LO Versions 3.5.5 and 3.5.7: Bug still exists.
LO Versions 3.6.0, 3.6.1 and 3.6.3: Bug not reproducable.

It seemed, that this bug was solved with Version 3.6.0.

Bug 51420 mentioned in Comment 8 still exists with 3.6.3. Hence not the same reason.
Comment 10 Jorendc 2013-02-07 20:37:18 UTC
(In reply to comment #9)
> Checked again:
> 
> LO Versions 3.5.5 and 3.5.7: Bug still exists.
> LO Versions 3.6.0, 3.6.1 and 3.6.3: Bug not reproducable.
> 
> It seemed, that this bug was solved with Version 3.6.0.

I also can't reproduce using Linux Mint 14 x64 with LibreOffice 4.0.0.3 (=final).
Therefore I mark this bug as RESOLVED WORKSFORME (we don't know exactly what patch resolved this bug, therefore we don't mark this as FIXED).

If this bug is still reproducible using 4.0, please REOPEN this bug.

Kind regards,
Joren
Comment 11 Harald Koester 2013-02-19 16:14:32 UTC
Verified with Version 4.0.0.3. Works for me. TMO bug can be closed.
Comment 12 starmatz71 2013-02-19 17:58:00 UTC
Cannot reproduce the bug, fixed for me in WindowsXP SP3 32Bit with LibreOffice V4.0.0.3.
Comment 13 Jorendc 2013-02-19 18:05:37 UTC
(In reply to comment #11)
> Verified with Version 4.0.0.3. Works for me. TMO bug can be closed.

(In reply to comment #12)
> Cannot reproduce the bug, fixed for me in WindowsXP SP3 32Bit with
> LibreOffice V4.0.0.3.

Thanks for your confirmation and testing. This bug is now closed as RESOLVED WORKSFORME; This is the correct status, so we don't need to alter the bug status anymore :-).

Kind regards,
Joren
Comment 14 Dave Richards 2013-04-04 20:25:43 UTC
Looks like a regression.  This was fixed in 3.6 and is broken again in 4.0.1.  When I hope the file in 3.6, I cannot make the cell canvas go white.  When I hope in LO 4 it's immediate and easy.

If you move the spreadsheet off screen and back again it repaints and fixes itself.  I think this is an X11 Expose event.

Tested on 64bit Linux.  

Adding attachment, red area shows canvas not displaying correctly...the green area shows cells that are rendering correctly.  Clicking into a cell causes it to go white along with other cells in the immediate area.
Comment 15 Dave Richards 2013-04-04 20:26:46 UTC
Created attachment 77443 [details]
Canvas not repainting using MASTER from April 4th, (4.1)
Comment 16 Michael Meeks 2013-04-05 10:18:57 UTC
Move to 3.6 MAB instead - 3.5 is closed now.
Comment 17 Harald Koester 2013-04-05 12:13:30 UTC
This bug and also bug 49186 describe bugs in Writer. I checked both cases again with version 4.0.2. It still works for me. 

Attachment 77443 [details] shows a screen shot of Calc. So there may be still a similar problem in Calc. Hence a new bug report should be created for this problem in Calc. 

To my Opinion this bug (43765) is still resolved and should be closed.
Comment 18 Thomas Thym 2013-04-08 10:23:38 UTC
I can confirm this bug in LO 4.0.2.2. (Windows XP) and 4.0.2.1 (Linux, openSUSE).
Comment 19 Thomas Thym 2013-04-08 10:27:55 UTC
Created attachment 77583 [details]
Example to demonstrate / test the bug

You should see the flickering / vanishing of the check boxes in this document.
Comment 20 Thomas Thym 2013-04-08 10:37:17 UTC
Note: If the document is saved as word 97 (.doc) the selected check boxes transform from the check marks to a crossed boxes. If that document is reopened those check boxes do not disappear. If saved and reopened as .odt again, the boxes remain "crossed" and do not disappear.
Comment 21 Thomas Thym 2013-04-08 10:37:53 UTC
Created attachment 77585 [details]
Testfile saved as .doc (word 97/...)
Comment 22 Thomas Thym 2013-04-08 10:38:25 UTC
Created attachment 77586 [details]
Testfile (.doc) saved as .odt again
Comment 23 Harald Koester 2013-04-09 15:32:04 UTC
The bug I described in the first description (checkbox outside table) is still resolved in Version 3.6.x and 4.0.x. 

The bug described in bug 49186 (checkbox inside table, attachment 60627 [details]) is also resolved (tested with 3.6.4 and 4.0.2).

The bug described by Thomas Thym (several checkboxes in different tables, comment 18, comment 19, attachment 77583 [details]) exists in version 3.5.7, 3.6.4 and 4.0.2. So, this bug seems to be different to the original description and also different to bug 49186. And it's not solved and it's not a regression.

Hence the problem of Thomas seems to be different, shall we treat this in this bug report or shall we open a new report?
Comment 24 Michael Stahl 2013-06-24 18:23:14 UTC
this problem was apparently introduced with OOo 3.2, but whether it can be
triggered depends on various circumstances.

the problem is that if the document is painted from the idle layout
timer, then the transparent frames are not painted, but their background
is painted, so they become invisible.

a similar bug was fixed in OOo issue 107365

for the bugdoc of bug 63949 the problem did not happen before LO 3.5,
where somehow the layout changed and decided to paint this document
from the idle handler.

the problem can also be triggered by clicking in certain places in the
document view, especially headers and footers and tables.
Comment 25 Michael Stahl 2013-06-24 18:26:03 UTC
*** Bug 57884 has been marked as a duplicate of this bug. ***
Comment 26 Michael Stahl 2013-06-24 18:27:05 UTC
*** Bug 51420 has been marked as a duplicate of this bug. ***
Comment 27 Michael Stahl 2013-06-24 18:27:49 UTC
*** Bug 63949 has been marked as a duplicate of this bug. ***
Comment 28 Commit Notification 2013-06-24 18:29:24 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=cfa994ccbd6ee681f5ab3648ce068c4881b495f5

fdo#43765, fdo#57884, fdo#58052, fdo#63949: disappearing form controls



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 29 Commit Notification 2013-06-25 17:10:58 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=280a43a8e35993eb5ec7d317599eb7cffb5d8e7f&h=libreoffice-4-1

fdo#43765, fdo#57884, fdo#58052, fdo#63949: disappearing form controls


It will be available in LibreOffice 4.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 30 Commit Notification 2013-06-27 19:14:14 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-3-6-7":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c007fe6949ca275dcda4cbf7ac5c3f86972137b4&h=libreoffice-3-6-7

fdo#43765, fdo#57884, fdo#58052, fdo#63949: disappearing form controls


It will be available already in LibreOffice 3.6.7.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 31 Commit Notification 2013-06-27 19:22:51 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=31a53b30b040021e503f779fd63d62ef723d82b0&h=libreoffice-4-0

fdo#43765, fdo#57884, fdo#58052, fdo#63949: disappearing form controls


It will be available in LibreOffice 4.0.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 32 Klaus R. 2013-07-07 05:39:02 UTC
*** Bug 57884 has been marked as a duplicate of this bug. ***
Comment 33 Commit Notification 2013-07-09 10:56:16 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=74d1e8ae14a6d4a3df6beaa432a1d5b51c1ffbfa&h=libreoffice-3-6

fdo#43765, fdo#57884, fdo#58052, fdo#63949: disappearing form controls


It will be available in LibreOffice 3.6.8.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.